<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.arturo.guesswhofriends.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/AppNameStyle"/>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_play"
        android:layout_centerInParent="true"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/btnAchievments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_achievments"
        android:layout_below="@+id/btnPlay"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_config"
        android:layout_below="@+id/btnAchievments"
        style="@style/ButtonStyle"/>
</RelativeLayout>
</ScrollView>